--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,21 @@
 site_name: Aplicação de Redes de Computadores
 site_author: Kelvin
+
 theme:
   name: material
   language: pt
+
+repo_name: iKelvinDev/apr-2023-2
+repo_url: https://iKelvinDev.github.io/apr-2023-2
+edit_uri: edit/main/docs/
+
+nav:
+- index.md
+- pedra.md
+- papel.md
+- tesoura.md
+- Ensaios:
+  - ensaios/mermaid.md
+
+plugins:
+- mermaid2
